--- a/css/animacion.css
+++ b/css/animacion.css
@@ -3,7 +3,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   display: none;
+  background-color: rgba(0, 0, 0, 0.363);
+  height: 100vh;
+  width: 100%;
 }
 /* Poké Styles */
 .pokeball {
