--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,34 @@
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 :root {
   --header-height: 60px;
-  min-width: 320px;
 }
 
 .wrapper {
   max-width: 800px;
-  margin: 10px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 90%;
+  overflow: hidden;
+  height: 100%;
+  margin: 20px auto;
+}
 
-  /* grid-gap: 1px; */
+main {
+  background-color: lightgray;
+  border-left: gray 1.5px solid;
+  border-right: gray 1.5px solid;
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .header {
+  margin-top: 10px;
   color: white;
   border-radius: 15px 15px 0 0;
-  height: var(--header-height);
   background-color: gray;
   display: flex;
   align-items: center;
-  overflow: hidden;
   font-family: "Ubuntu", sans-serif;
 }
 
@@ -59,35 +60,32 @@
   font-size: 20px;
 }
 
-main {
-  background-color: lightgray;
-  border-left: gray 1.5px solid;
-  border-right: gray 1.5px solid;
-  position: relative;
-}
-
-.container_left {
+.card {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   height: 240px;
+  width: 80%;
+  margin: auto;
 }
 
-.container_right {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.stats {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 20px auto;
   background-color: white;
   padding: 20px;
   border-radius: 15px;
   font-family: "Prompt", sans-serif;
   font-size: 15px;
-  height: 300px;
-  width: 100%;
+  width: 70%;
 }
 
-.cardTitle {
-  min-width: 300px;
+.card__title {
+  min-width: 100%;
   background-color: white;
   display: flex;
   align-items: center;
@@ -96,53 +94,60 @@ main {
   font-family: "Ubuntu", sans-serif;
 }
 
-.cardTitle__icon {
+.card__title-icon {
   height: 3rem;
   border-radius: 15px;
   cursor: pointer;
   padding: 0.5rem;
 }
 
-.cardTitle__title {
+.card__title-name {
   color: black;
-  margin-left: 0.3rem;
-  margin-right: 1rem;
   font-size: 1.3rem;
   text-transform: capitalize;
 }
 
-.cardImage {
-  height: 200px;
+.card__image {
+  height: 180px;
   margin: auto;
   position: absolute;
   bottom: 50%;
 }
-.stats {
+.stats__general {
   text-align: center;
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
-.cardImage__img {
+.card__image-poke {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
-.stats__title {
-  font-size: 20px;
+.stats__general-title {
+  font-size: 17px;
   color: rgb(119, 119, 119);
+  width: 50%;
+  text-align: start;
+  font-weight: 500;
+  margin: 10px;
 }
-.baseStat {
-  font-size: 15px;
+.stats__general-base {
+  font-size: 17px;
   color: rgb(119, 119, 119);
-  text-transform: capitalize;
+  text-transform: uppercase;
   white-space: nowrap;
   text-overflow: ellipsis;
-  margin: auto;
   overflow: hidden;
+  width: 50%;
+  text-align: start;
+  font-weight: 500;
+  margin: 0;
 }
 
 .footer {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   border-radius: 0 0 12px 12px;
   background-color: white;
   border: 1px solid gray;
@@ -151,73 +156,105 @@ main {
 .footer__title {
   margin: 10px auto;
   text-align: center;
-  width: 40%;
+  width: 30%;
+  font-weight: 300;
 }
 
-.pokeBottom {
-  width: 100%;
+.footer__minis {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  margin: auto;
-  gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: max-content;
+  margin: 10px auto;
 }
 
-.pokeBlack {
+.footer__minis-poke {
   display: flex;
   align-items: center;
-  width: 100px;
+  width: 80px;
   margin: auto;
   justify-content: center;
   background-color: lightgray;
-  border-radius: 20px;
+  border-radius: 10px;
   cursor: pointer;
+  height: 90px;
 }
 
-.pokeBlack:hover {
+.footer__minis-poke:hover {
   background-color: gray;
   transform: scale(1.1);
 }
+.footer__minis-img {
+  filter: brightness(0) invert(0.1);
+  background-blend-mode: darken;
+  height: 100%;
+}
 
-.pokeBlack__img:hover {
+.footer__minis-img:hover {
   transform: rotateY(360deg);
   position: relative;
   color: #262626;
   transition: 0.5s;
   z-index: 3;
-}
-
-.pokeBlack__img {
-  height: 80px;
-  width: 50px;
+  filter: brightness(1);
 }
 
 @media screen and (min-width: 500px) {
+  .header {
+    margin: 0 auto;
+    width: 100%;
+  }
   .wrapper {
     margin: 20px auto;
-  }
-
-  .header,
-  .footer,
-  main {
-    grid-column: 1 / -1;
-    clear: both;
+    display: flex;
+    flex-direction: column;
   }
 
   main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding: 30px 0;
   }
 
-  .container_right {
+  .stats {
+    width: 30%;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 2fr));
+  }
+
+  .card__title {
+    margin: 0;
+  }
+
+  .stats__general {
+    text-align: center;
+    overflow: hidden;
+    flex-direction: column;
+  }
+  .stats__general-title {
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    margin: 10px;
+  }
+  .stats__general-base {
+    font-size: 17px;
+    font-weight: 600;
+    margin: 0;
+    text-align: center;
+  }
+
+  .card {
+    height: 300px;
+    margin: 0;
     width: 40%;
   }
-  .container_left {
-    height: 300px;
-  }
 
-  .cardImage {
+  .card__image {
     position: static;
+    height: 220px;
   }
 
   .imagePK {
@@ -228,40 +265,22 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 10px 40px;
   }
 
-  .pokeBottom {
-    grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
-  }
-
-  .titleFooter {
-    margin-right: 5rem;
-  }
-
-  .containerFooter {
-    display: flex;
-    align-items: center;
-    object-fit: scale-down;
-    justify-content: space-between;
-  }
-
-  .footerButtoms {
+  .footer__minis {
     display: flex;
   }
-}
 
-.wrapper > * {
-  padding: 20px;
-  margin-bottom: 10px;
+  .footer__minis-poke {
+    padding: 5px;
+    height: 70px;
+    width: 70px;
+  }
 }
 
 /* We need to set the widths used on floated items back to auto, and remove the bottom margin as when we have grid we have gaps. */
-@supports (display: grid) {
-  .wrapper > * {
-    width: auto;
-    margin: 0;
-  }
-}
+
 .isDisabled {
   pointer-events: none;
   opacity: 0.5;
