--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ main {
   background-color: gray;
   display: flex;
   align-items: center;
+  justify-content: center;
   font-family: "Ubuntu", sans-serif;
 }
 
@@ -204,6 +205,7 @@ main {
   .header {
     margin: 0 auto;
     width: 100%;
+    justify-content: flex-start;
   }
   .wrapper {
     margin: 20px auto;
